deployments/04-gitea/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    name: gitea
    istio-injection: enabled
