deployments/04-gitea/03-istio-config.yaml
apiVersion: "security.istio.io/v1"
kind: "PeerAuthentication"
metadata:
  name: "gitea-postgres"
  namespace: "gitea"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea
  mtls:
    mode: DISABLE
