deployments/04-gitea/05-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea
  namespace: gitea
spec:
  parentRefs:
    - name: infra-gateway
      namespace: istio-system
  hostnames:
    - gitea.${APPLICATIONS.GLOBAL.BASE_URL}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea-http
          port: 3000
